--- a/Vinculo.html
+++ b/Vinculo.html
@@ -18,12 +18,12 @@
     <!--Seccion de Anclas-->
     <section id="seccion1">
         <h2>Secccion 1</h2>
-        <p>Contenudo de seccion 1</p>
+        <p>3142101</p>
     </section>
 
     <section id="seccion2">
         <h2>Seccion 2</h2>
-        <p>Contenido de seccion 2</p>
+        <p>oscarenriqueepedraza@gmail.com</p>
     </section>
 </body>
 </html>
