--- a/index.html
+++ b/index.html
@@ -16,5 +16,18 @@
     <p>Bienvenido a la pagina principal. Puedes ir a la pagina secundaria haciendo clic en el sigiente
         enlace:</p>
         <a href="pagina_secundaria.html">Ir a la Pagina secundaria</a>
+        <br>
+        <h1>imagenes</h1>
+        <br>
+        <img src="imagenes/NAZ_1ad553278ce94e6f8acbb84047165cd4.jpg" alt="">
+        <img src="imagenes/nowy-czarny-lamborghini_1131377-462.avif" alt="">
+        <img src="imagenes/photo-1629339942248-45d4b10c8c2f.jpg" alt="">
+        <br>
+        <h1>Enlaces</h1>
+        <a href="https://7699.play.gamezop.com">gamezop</a>
+        <br>
+        <a href="https://www.avianca.com/co/es/">avianca</a>
+        <br>
+        <a href="https://www.instant-gaming.com/?igr=operagx-browser-latam">instant-gaming</a>
 </body>
 </html>
