--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
         <a href="https://www.avianca.com/co/es/">avianca</a>
         <br>
         <a href="https://www.instant-gaming.com/?igr=operagx-browser-latam">instant-gaming</a>
+        <h1>DATOS </h1>
+        <br>
+        <p>Oscar Enrique Pedraza Burbano</p>
+        <p>Telefono 3162942404</p>
 </body>
 </html>
