--- a/Vinculo.html
+++ b/Vinculo.html
@@ -24,6 +24,7 @@
     <section id="seccion2">
         <h2>Seccion 2</h2>
         <p>oscarenriqueepedraza@gmail.com</p>
+        <img src="imagenes/nowy-czarny-lamborghini_1131377-462.avif" alt="">
     </section>
 </body>
 </html>
